# merger-cli

./: .gitignore  MANIFEST.in  README.md  TESTING.md  installer.iss  merger.spec  merger_wrapper.py  nfpm.yaml  pyproject.toml  requirements.txt  test_output.txt
.github/workflows/: ci.yml  publish-cli.yml  publish-plugin-api.yml  publish.yml  release-cli.yml  release.yml  tests.yml  version-check.yml
Formula/: merger-cli.rb  merger-cli.rb.j2  merger-cli.rb.template
examples/: main.example.py
examples/custom_exporters/: markdown_exporter.py  xml_exporter.py
examples/custom_parsers/: image_parser.py  pdf_parser.py
examples/custom_readers/: ipynb.py  pdf.py
examples/exporters/: markdown_exporter.py  xml_exporter.py
examples/parsers/: image_parser.py  pdf_parser.py
merger/: cli.py  merger_cli.py  registry.py
merger/file_tree/: tree.py
merger/file_tree/exporters/: directory_tree_exporter.py  json_exporter.py  plain_text_exporter.py  strategy.py  tree_exporter.py  tree_with_plain_text_exporter.py
merger/parsers/: default_parser.py  modules.py  parser.py
merger/parsing/: modules.py  parser.py
merger/resources/ignore_files/: default.ignore  java.ignore  node.ignore  python.ignore
merger/utils/: config.py  default_ignore_files.py
merger/v1/: cli.py  filtering.py  registry.py
merger/v2/custom_readers/: reader.py
merger/v2/exceptions/: exceptions.py
merger/v2/file_tree/: entry.py  tree.py
merger/v2/files/: files.py
merger/v2/parsers/: parsers.py
merger/v2/readers/: default_reader.py  reader.py
merger/v2/utils/: merger_dir.py
packaging/: installer.iss  installer.iss.j2  merger.spec  merger.wxs  merger.wxs.j2  merger_wrapper.py  nfpm.yaml
scripts/: generate_installer.py  metadata_helper.py  test_linux.sh  test_macos.sh  test_windows.ps1  update_formula.py  version_check.py  version_check.sh
src/merger/: cli.py  models.py
src/merger-api/: MANIFEST.in  README.md  pyproject.toml
src/merger-api/merger_api/: __init__.py  exporters.py  models.py  parsing.py
src/merger-cli/merger_cli/cli/: main.py  utils.py
src/merger-cli/merger_cli/exporters/: factory.py  registry.py
src/merger-cli/merger_cli/file_tree/: scanner.py
src/merger-cli/merger_cli/parsing/: registry.py
src/merger-cli/merger_cli/utils/: config.py  ignore_templates.py  module_manager.py  update.py  version.py
src/merger/api/: models.py  parsing.py
src/merger/cli/: main.py  utils.py
src/merger/exporters/: base.py  factory.py  registry.py  tree_exporter.py
src/merger/exporters/impl/: directory_tree_exporter.py  json_exporter.py  json_tree_exporter.py  plain_text_exporter.py  text.py  tree.py  tree_text.py  tree_with_plain_text_exporter.py
src/merger/file_tree/: entries.py  scanner.py  tree.py
src/merger/logging/: __init__.py  constants.py
src/merger/parsing/: base.py  parser.py  registry.py
src/merger/parsing/impl/: default_parser.py  text.py
src/merger/resources/ignore_files/: csharp.ignore  java.ignore  php.ignore
src/merger/utils/: config.py  db.py  ignore_templates.py  magic.py  module_manager.py  patterns.py  plugin_loader.py  update.py  version.py
src/merger_cli/api/: __init__.py  enums.py  exporters.py  models.py
src/merger_cli/cli/: main.py
src/merger_cli/exporters/: factory.py  registry.py
src/merger_cli/exporters/impl/: json_exporter.py
src/merger_cli/logging/: __init__.py
src/merger_cli/parsing/: registry.py
src/merger_cli/parsing/impl/: default_parser.py
src/merger_cli/resources/ignore_files/: cpp.ignore  kotlin.ignore
src/merger_cli/utils/: config.py
tests/: conftest.py  test_cli.py  test_cli_case_insensitive.py  test_config.py  test_exporters.py  test_injection.py  test_install_error_reporting.py  test_languages.py  test_magic_utils.py  test_module_manager.py  test_modules.py  test_patterns.py  test_plugin_install_errors.py  test_plugin_loader.py  test_plugins.py  test_standalone.py  test_tree.py  test_ui.py  test_unified_modules.py  test_unified_plugins.py  test_update.py  test_updates.py  test_utils.py
(+7 files in other folders)
