[project]
name = "merger-cli"
version = "4.0.0a11"
description = "Merger is a command-line utility for developers that scans a directory, filters files using customizable ignore patterns, and merges all readable content into a single structured output file."
keywords = ["merger", "file system", "concatenation", "automation", "development", "plugins"]
authors = [
    { name = "Diogo Toporcov", email = "diogotoporcov@gmail.com" }
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "charset-normalizer>=3.0.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "pathspec>=0.11.0",
    "rich-argparse>=1.1.0",
    "packaging>=23.0",
    "python-magic-bin>=0.4.14; platform_system == 'Windows'",
    "python-magic>=0.4.15; platform_system != 'Windows'"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "tomli; python_version < '3.11'"
]
dev = [
    "pyinstaller>=6.0.0",
    "tomli; python_version < '3.11'"
]


[project.urls]
Homepage = "https://github.com/diogotoporcov/merger-cli"
Documentation = "https://github.com/diogotoporcov/merger-cli"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["merger_cli"]

[tool.setuptools.package-data]
merger_cli = ["resources/ignore_files/*.ignore"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
merger = "merger_cli.cli.main:main"